--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
                 <h2 class="mb-5">Project</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Image Captioning</h3>
+                        <h3 class="mb-0">AUTOMATIC IMAGE CAPTIONING WITH DEEP LEARNING – APPLYING TO HELP THE
+                            BLIND VISUALIZE THE WORLD</h3>
                         <div class="subheading mb-3">Reseraching - Developer</div>
                         <div>Team 4</div>
                         <p>Project to participate in scientific research student conference<a target="_blank"
@@ -132,7 +133,7 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Clothes virtual Try on</h3>
+                        <h3 class="mb-0">VIRTUAL TRY-ON CLOTHES USING DEEP LEARNING METHODS</h3>
                         <div class="subheading mb-3">Reseraching - Developer</div>
                         <div>Team 3</div>
                         <p>Project to participate in scientific research student conference<a target="_blank"
@@ -142,10 +143,21 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">ỨNG DỤNG MULTITASK-LEARNING TRONG PHÂN TÍCH THÀNH PHẦN
+                            HÓA HỌC THỰC PHẨM DỰA TRÊN PHỔ NIR</h3>
+                        <div class="subheading mb-3">Reseraching - Developer</div>
+                        <div>Team 3</div>
+                        <p>Project to participate in scientific research student conference<a target="_blank"
+                                href="/cv/assets/docs/NCKH_2022-2023.docx.pdf">See more</a></p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">Da Nang plant identify</h3>
                         <div class="subheading mb-3">AI Developer</div>
                         <div>Team 1</div>
-                        <p>Building module to search plant spiecies by image<a target="_blank"
+                        <p>Building module to search plant spiecies by image, deploy machine learning model on Mobile Application<a target="_blank"
                                 href="http://danang.plantid.com.vn/">See more</a></p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
@@ -157,6 +169,16 @@
                         <div>Team 4</div>
                         <p>An website helps drivers to find best place to park their car<a target="_blank"
                                 href="https://youtu.be/aqc-QID5GfQ">See more</a></p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Digitalizing Certificate of land use rights - PBL6 (AI - DS)</h3>
+                        <div class="subheading mb-3">AI - BackEnd Developer</div>
+                        <div>Team 3</div>
+                        <p>An website helps extraction key information from Certificate of land use rights<a target="_blank"
+                                href="https://www.youtube.com/watch?v=8_vNeFpon8U">See more</a></p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
                 </div>
@@ -194,7 +216,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Multiple choice test website</h3>
                         <div class="subheading mb-3">Back-end + Front-end</div>
-                        <div>Myself</div>
+                        <div>Team 1</div>
                         <p>You can do Multiple choice exercise via Website or Messenger. I developed this website to
                             award to my high school <a target="_blank" href="http://botthithptqg.herokuapp.com/">See
                                 more</a></p>
@@ -204,7 +226,21 @@
 
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
+                        <h3 class="mb-0">Company project</h3>
+                        <p>Module face recognition - Virtual assistance</p>
+                        <p>Module image manipulation detection - eKYC</p>
+                        <p>Module recapture detection - eKYC</p>
+                        <p>Personalized Character Image - Virtual Idol</p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary"></span></div>
+                </div>
+
+
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
                         <h3 class="mb-0">Some pet project</h3>
+                        <p>Raspberry Monitoring and Controling Web-base - Project Base Learning<a target="_blank"
+                            href="https://www.youtube.com/watch?v=rsIklOp8tVY">See more</a></p>
                         <p>Manage Coffee via Smartphone (SocketIO - NodeJs)<a target="_blank"
                                 href="https://www.youtube.com/watch?v=L_qaIUrWqUs">See more</a></p>
                         <p>Shopping Website (Django)<a target="_blank"
@@ -221,6 +257,9 @@
                         <p>My blog on Codelean<a target="_blank"
                                 href="https://codelearn.io/sharing?str=huytuong010101&startdate=&enddate=">See more</a>
                         </p>
+                        <p>My blog on Viblo<a target="_blank"
+                            href="viblo.asia/u/huytuong010101">See more</a>
+                    </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"></span></div>
                 </div>
@@ -234,7 +273,7 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Intern AI - Computer Vision</h3>
+                        <h3 class="mb-0">Computer Vision</h3>
                         <div class="subheading mb-3">Ftech AI Company</div>
                         <div>Research some projects related to Computer Vision</div>
                         <p><a target="_blank" href="https://ftech.ai/">About company</a></p>
@@ -262,7 +301,7 @@
                     <li class="list-inline-item"><i class="fab fa-aws"></i></li>
                 </ul>
 
-                <div class="subheading mb-3">Framework - Library</div>
+                <div class="subheading mb-3">Flatform - Framework - Library</div>
                 <ul class="">
                     <li>NodeJS</li>
                     <li>Django</li>
@@ -334,6 +373,14 @@
                         <sup>rd</sup>
                         "DUT Programing" competition
                         <a data-toggle="modal" data-target="#dutprograming" class="text-primary"><i
+                                class="fas fa-image"></i></a>
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        3
+                        <sup>rd</sup>
+                        "DaNang code league"
+                        <a data-toggle="modal" data-target="#" class="text-primary"><i
                                 class="fas fa-image"></i></a>
                     </li>
                     <li>
