--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <h3 class="mb-0">Parking Findor System - PBL5 (AI - DS - IOT)</h3>
                         <div class="subheading mb-3">AI - BackEnd Developer</div>
                         <div>Team 4</div>
-                        <p>An website helps drivers to find best place to park their car<a target="_blank"
+                        <p>A website helps drivers to find best place to park their car<a target="_blank"
                                 href="https://youtu.be/aqc-QID5GfQ">See more</a></p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
@@ -177,7 +177,7 @@
                         <h3 class="mb-0">Digitalizing Certificate of land use rights - PBL6 (AI - DS)</h3>
                         <div class="subheading mb-3">AI - BackEnd Developer</div>
                         <div>Team 3</div>
-                        <p>An website helps extraction key information from Certificate of land use rights<a target="_blank"
+                        <p>A website helps extraction key information from Certificate of land use rights<a target="_blank"
                                 href="https://www.youtube.com/watch?v=8_vNeFpon8U">See more</a></p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
