--- a/index.html
+++ b/index.html
@@ -146,11 +146,21 @@
                         <h3 class="mb-0">ỨNG DỤNG MULTITASK-LEARNING TRONG PHÂN TÍCH THÀNH PHẦN
                             HÓA HỌC THỰC PHẨM DỰA TRÊN PHỔ NIR</h3>
                         <div class="subheading mb-3">Reseraching - Developer</div>
-                        <div>Team 3</div>
+                        <div>Team 2</div>
                         <p>Project to participate in scientific research student conference<a target="_blank"
                                 href="/cv/assets/docs/NCKH_2022-2023.docx.pdf">See more</a></p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">2023</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">VIETNAMESE END-TO-END QUESTION ANSWERING SYSTEM BASED ON USER-PROVIDED DOCUMENT</h3>
+                        <div class="subheading mb-3">Reseraching - Developer</div>
+                        <div>Team 1</div>
+                        <p>Project to participate in scientific research student conference<a target="_blank"
+                                href="/cv/assets/docs/end2end_vie_qa_2022-2023.docx.pdf">See more</a></p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">2023</span></div>
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
