--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#publication">Publication</a></li>
                 <li class="text-white">
                     <span id="numOfViewer"></span>
                     <i class="fas fa-eye"></i>
@@ -154,7 +155,8 @@
                 </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">VIETNAMESE END-TO-END QUESTION ANSWERING SYSTEM BASED ON USER-PROVIDED DOCUMENT</h3>
+                        <h3 class="mb-0">VIETNAMESE END-TO-END QUESTION ANSWERING SYSTEM BASED ON USER-PROVIDED DOCUMENT
+                        </h3>
                         <div class="subheading mb-3">Reseraching - Developer</div>
                         <div>Team 1</div>
                         <p>Project to participate in scientific research student conference<a target="_blank"
@@ -167,8 +169,8 @@
                         <h3 class="mb-0">Da Nang plant identify</h3>
                         <div class="subheading mb-3">AI Developer</div>
                         <div>Team 1</div>
-                        <p>Building module to search plant spiecies by image, deploy machine learning model on Mobile Application<a target="_blank"
-                                href="http://danang.plantid.com.vn/">See more</a></p>
+                        <p>Building module to search plant spiecies by image, deploy machine learning model on Mobile
+                            Application<a target="_blank" href="http://danang.plantid.com.vn/">See more</a></p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
                 </div>
@@ -187,8 +189,8 @@
                         <h3 class="mb-0">Digitalizing Certificate of land use rights - PBL6 (AI - DS)</h3>
                         <div class="subheading mb-3">AI - BackEnd Developer</div>
                         <div>Team 3</div>
-                        <p>A website helps extraction key information from Certificate of land use rights<a target="_blank"
-                                href="https://www.youtube.com/watch?v=8_vNeFpon8U">See more</a></p>
+                        <p>A website helps extraction key information from Certificate of land use rights<a
+                                target="_blank" href="https://www.youtube.com/watch?v=8_vNeFpon8U">See more</a></p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2022</span></div>
                 </div>
@@ -250,7 +252,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Some pet project</h3>
                         <p>Raspberry Monitoring and Controling Web-base - Project Base Learning<a target="_blank"
-                            href="https://www.youtube.com/watch?v=rsIklOp8tVY">See more</a></p>
+                                href="https://www.youtube.com/watch?v=rsIklOp8tVY">See more</a></p>
                         <p>Manage Coffee via Smartphone (SocketIO - NodeJs)<a target="_blank"
                                 href="https://www.youtube.com/watch?v=L_qaIUrWqUs">See more</a></p>
                         <p>Shopping Website (Django)<a target="_blank"
@@ -267,9 +269,8 @@
                         <p>My blog on Codelean<a target="_blank"
                                 href="https://codelearn.io/sharing?str=huytuong010101&startdate=&enddate=">See more</a>
                         </p>
-                        <p>My blog on Viblo<a target="_blank"
-                            href="viblo.asia/u/huytuong010101">See more</a>
-                    </p>
+                        <p>My blog on Viblo<a target="_blank" href="viblo.asia/u/huytuong010101">See more</a>
+                        </p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary"></span></div>
                 </div>
@@ -283,12 +284,21 @@
                 <h2 class="mb-5">Experience</h2>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
-                        <h3 class="mb-0">Computer Vision</h3>
-                        <div class="subheading mb-3">Ftech AI Company</div>
-                        <div>Research some projects related to Computer Vision</div>
+                        <h3 class="mb-0">Computer Vision Collaborator</h3>
+                        <div class="subheading mb-3">Ftech AI</div>
+                        <div>Research and build some projects related to Computer Vision</div>
                         <p><a target="_blank" href="https://ftech.ai/">About company</a></p>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">October 2020 to Now</span></div>
+                    <div class="flex-shrink-0"><span class="text-primary">October 2020 to September 2023</span></div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Association NLP Engineer</h3>
+                        <div class="subheading mb-3">Paradox</div>
+                        <div>Research and build AI recruiting assistance </div>
+                        <p><a target="_blank" href="https://www.paradox.ai/">About company</a></p>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">September 2023 to Now</span></div>
                 </div>
 
             </div>
@@ -381,7 +391,7 @@
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                         3
                         <sup>rd</sup>
-                        "DUT Programing" competition
+                        "DUT Programing" competition (DUT)
                         <a data-toggle="modal" data-target="#dutprograming" class="text-primary"><i
                                 class="fas fa-image"></i></a>
                     </li>
@@ -389,9 +399,8 @@
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
                         3
                         <sup>rd</sup>
-                        "DaNang code league"
-                        <a data-toggle="modal" data-target="#" class="text-primary"><i
-                                class="fas fa-image"></i></a>
+                        "DaNang code league (FPT - DUT)"
+                        <a data-toggle="modal" data-target="#" class="text-primary"><i class="fas fa-image"></i></a>
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
@@ -414,6 +423,28 @@
                         Creative project - Community project (AEC soft skill course)
                         <a data-toggle="modal" data-target="#softskill" class="text-primary"><i
                                 class="fas fa-image"></i></a>
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Graduated valedictorian of the IT Faculty
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        2
+                        <sup>nd</sup>
+                        Gotcha Corona Contest (KMS Technology)
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Back To School Scholarship (KMS)
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        Scholarship for top 5 excellent 4th year students (VNG)
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
+                        All-Term Study Incentive Scholarship (DUT)
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
@@ -463,12 +494,11 @@
                             Networks and Deep Learning</a>
                     </li>
                     <li>
-                        <a target="_blank"
-                            href="https://coursera.org/share/1d527154b2663e62944598c98feeeded">Deep Learning with PyTorch : Generative Adversarial Network</a>
+                        <a target="_blank" href="https://coursera.org/share/1d527154b2663e62944598c98feeeded">Deep
+                            Learning with PyTorch : Generative Adversarial Network</a>
                     </li>
                     <li>
-                        <a target="_blank"
-                            href="https://coursera.org/share/48d1ca721544da9e71b582343736488c">
+                        <a target="_blank" href="https://coursera.org/share/48d1ca721544da9e71b582343736488c">
                             Visualizing Filters of a CNN using TensorFlow</a>
                     </li>
 
@@ -484,6 +514,34 @@
                     </li>
                 </ul>
             </div>
+        </section>
+        <hr class="m-0">
+        <!-- Publication -->
+        <section class="resume-section" id="publication">
+            <div class="resume-section-content">
+                <h2 class="mb-5">Publication</h2>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div>
+                        <h3 class="mb-0">PlantKViT: A COMBINATION MODEL OF VISION TRANSFORMER AND KNN FOR FOREST PLANTS
+                            CLASSIFICATION</h3>
+                        <div class="subheading mb-3">JUCS - Journal of Universal Computer Science 29(9): 1069-1089
+                            doi: 10.3897/jucs.94657
+                        </div>
+                        <p><a target="_blank"
+                                href="https://lib.jucs.org/articles.php?id=94657&journal_name=jucs">Publish</a></p>
+                                <h3 class="mb-0">News</h3>
+                                <div class="subheading mb-3">Học sinh tạo website thi thử kỳ thi THPT quốc gia <a
+                                        href="https://baoquangnam.vn/giao-duc/hoc-sinh-tao-website-thi-thu-ky-thi-thpt-quoc-gia-67780.html?gidzl=fIIe5151IX2bCw0R7rTB4AGvenq9NKj6iZUc7m5UJXRdOQr8Kmr3JU1bg4PGMa1Bi3AjHsQ3NDiz5qfB6G">Link</a>
+                                </div>
+                                <div class="subheading mb-3">Giải thưởng Huỳnh Thúc Kháng lần thứ XII-2018: Hai gương mặt
+                                    tiêu biểu<a
+                                        href="https://baoquangnam.vn/xa-hoi/giai-thuong-huynh-thuc-khang-lan-thu-xii-2018-hai-guong-mat-tieu-bieu-57887.html?gidzl=Z9DyBLAQs4oCX7GYN8pPJ8sEToPAXjaOcu1o94A5t4ZErdbp4DRH4ydIV7qJWT8LcOLvV6RfC9rOL97PHG">Link</a>
+                                </div>
+                                <div class="subheading mb-3">Trường Đại học Bách khoa, Đại học Đà Nẵng trao bằng tốt nghiệp
+                                    đợt II năm 2023<a
+                                        href="https://tapchidongnama.vn/truong-dai-hoc-bach-khoa-dai-hoc-da-nang-trao-bang-tot-nghiep-dot-ii-nam-2023/">Link</a>
+                                </div>
+                    </div>
         </section>
     </div>
     <!--modal-->
