--- a/index.html
+++ b/index.html
@@ -529,18 +529,23 @@
                         </div>
                         <p><a target="_blank"
                                 href="https://lib.jucs.org/articles.php?id=94657&journal_name=jucs">Publish</a></p>
-                                <h3 class="mb-0">News</h3>
-                                <div class="subheading mb-3">Học sinh tạo website thi thử kỳ thi THPT quốc gia <a
-                                        href="https://baoquangnam.vn/giao-duc/hoc-sinh-tao-website-thi-thu-ky-thi-thpt-quoc-gia-67780.html?gidzl=fIIe5151IX2bCw0R7rTB4AGvenq9NKj6iZUc7m5UJXRdOQr8Kmr3JU1bg4PGMa1Bi3AjHsQ3NDiz5qfB6G">Link</a>
-                                </div>
-                                <div class="subheading mb-3">Giải thưởng Huỳnh Thúc Kháng lần thứ XII-2018: Hai gương mặt
-                                    tiêu biểu<a
-                                        href="https://baoquangnam.vn/xa-hoi/giai-thuong-huynh-thuc-khang-lan-thu-xii-2018-hai-guong-mat-tieu-bieu-57887.html?gidzl=Z9DyBLAQs4oCX7GYN8pPJ8sEToPAXjaOcu1o94A5t4ZErdbp4DRH4ydIV7qJWT8LcOLvV6RfC9rOL97PHG">Link</a>
-                                </div>
-                                <div class="subheading mb-3">Trường Đại học Bách khoa, Đại học Đà Nẵng trao bằng tốt nghiệp
-                                    đợt II năm 2023<a
-                                        href="https://tapchidongnama.vn/truong-dai-hoc-bach-khoa-dai-hoc-da-nang-trao-bang-tot-nghiep-dot-ii-nam-2023/">Link</a>
-                                </div>
+                        <h3 class="mb-0">Masked autoencoder-based self-supervised learning for forest plant classification</h3>
+                        <div class="subheading mb-3">JCYBERNETICS AND PHYSICS, VOL. 13, NO. 1, 2024, 32–41, https://doi.org/10.35470/2226-4116-2024-13-1-32-41
+                        </div>
+                        <p><a target="_blank"
+                                href="http://lib.physcon.ru/doc?id=3193926d83ee">Publish</a></p>
+                        <h3 class="mb-0">News</h3>
+                        <div class="subheading mb-3">Học sinh tạo website thi thử kỳ thi THPT quốc gia <a
+                                href="https://baoquangnam.vn/giao-duc/hoc-sinh-tao-website-thi-thu-ky-thi-thpt-quoc-gia-67780.html?gidzl=fIIe5151IX2bCw0R7rTB4AGvenq9NKj6iZUc7m5UJXRdOQr8Kmr3JU1bg4PGMa1Bi3AjHsQ3NDiz5qfB6G">Link</a>
+                        </div>
+                        <div class="subheading mb-3">Giải thưởng Huỳnh Thúc Kháng lần thứ XII-2018: Hai gương mặt
+                            tiêu biểu<a
+                                href="https://baoquangnam.vn/xa-hoi/giai-thuong-huynh-thuc-khang-lan-thu-xii-2018-hai-guong-mat-tieu-bieu-57887.html?gidzl=Z9DyBLAQs4oCX7GYN8pPJ8sEToPAXjaOcu1o94A5t4ZErdbp4DRH4ydIV7qJWT8LcOLvV6RfC9rOL97PHG">Link</a>
+                        </div>
+                        <div class="subheading mb-3">Trường Đại học Bách khoa, Đại học Đà Nẵng trao bằng tốt nghiệp
+                            đợt II năm 2023<a
+                                href="https://tapchidongnama.vn/truong-dai-hoc-bach-khoa-dai-hoc-da-nang-trao-bang-tot-nghiep-dot-ii-nam-2023/">Link</a>
+                        </div>
                     </div>
         </section>
     </div>
